--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
-title:            Orion's Cookery
+title:            Orions Cookery
 description:      The art of food.
 logo:             site-logo.png
 disqus_shortname:
 search:           true
 # Change url to your domain. Leave localhost server or blank when working locally.
 # You don't need to specify the protocol if you want it available on http and https. Example: //localhost:4000
-url:              http://localhost:4000
+url:              //www.orionscookery.com
 
 # Owner/author information
 owner:
-  name:           Orion's Cookery
+  name:           Orions Cookery
   avatar:         bio-photo.jpg
-  email:          orionscookery@gmail.com
+  email:          vance@orionscookery.com
   # Social networking links used in footer. Update and remove as you like.
   instagram:	  orionskitchen
 
@@ -58,5 +58,3 @@ kramdown:
 
 include: [".htaccess"]
 exclude: ["lib", "config.rb", "Gemfile", "Capfile", "README.md", "LICENSE", "Gemfile.lock", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules"]
-
-search: true
