--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:            Orions Cookery
+title:            Orion's Cookery
 description:      The art of food.
 logo:             site-logo.png
 disqus_shortname:
@@ -9,7 +9,7 @@ url:              //www.orionscookery.com
 
 # Owner/author information
 owner:
-  name:           Orions Cookery
+  name:           Orion's Cookery
   avatar:         bio-photo.jpg
   email:          vance@orionscookery.com
   # Social networking links used in footer. Update and remove as you like.
