--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,10 @@ bing_verify:
 links:
   - title: About
     url: /about/
+  - title: OC Nightmarket 2015
+  	url: /oc-nightmarket-2015/
+  - title: Catering
+    url: /catering/
   - title: Contact
     url: /contact/
 
