--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:            Orion's Cookery
 description:      The art of food.
-logo:             site-logo.png
+logo:             site-logo.jpg
 disqus_shortname:
 search:           true
 # Change url to your domain. Leave localhost server or blank when working locally.
@@ -28,10 +28,8 @@ links:
     url: /about/
   - title: OC Nightmarket 2015
     url: /oc-nightmarket-2015/
-  - title: Catering
-    url: /catering/
-  - title: Contact
-    url: /contact/
+  - title: Private Events
+    url: /private-events/
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    America/Los_Angeles
